chore: fix wrap on mobile & update light theme

--- a/site/public/styles.css
+++ b/site/public/styles.css
@@ -284,7 +284,7 @@ footer {
 pre {
   code {
     span {
-      text-wrap: pretty;
+      text-wrap: wrap;
     }
   }
 }
